<resources>
    <string name="app_name">Угадай число</string>

    <string name="restart">R</string>
    <string name="erase">C</string>
    <string name="enter">↲</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="input_number">Введите число</string>
    <string name="show_number">Я загадал %d</string>
    <string name="win">Победа!!</string>
    <string name="lose">Поражение!!</string>

    <string-array name="messages">
        <item name="empty">Нужно ввести число!</item>
        <item name="win">Поздравляю! Число угадано!</item>
        <item name="lose">Попытки закончились! Поражение!</item>
        <item name="more">Нужно меньше</item>
        <item name="less">Нужно больше</item>
        <item name="out of range">Число вне диапазона</item>
        <item name="too long">Слишком большое число</item>
    </string-array>

    <plurals name="attempts_count">
        <item quantity="one">Осталась %d попытка</item>
        <item quantity="few">Осталось %d попытки</item>
        <item quantity="many">Осталось %d попыток</item>
        <item quantity="other">Осталось %d попыток</item>
        <item quantity="zero">Попытки закончились</item>
    </plurals>
</resources>